Added ban for low resolution devices

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </ul>
       </div>
     </header>
-    <main>
+    <main class="main">
       <!-- HERO -->
       <section class="hero">
         <div class="container">
@@ -577,10 +577,7 @@
               <ul class="footer-address__list">
                 <li class="footer-address__item">
                   <a
-                    class="
-                      footer-address__link footer-address__link--main-color
-                      link
-                    "
+                    class="footer-address__link footer-address__link--main-color link"
                     href="https://goo.gl/maps/1FagarzU2wQ8Z3tW7"
                     >г. Киев, пр-т Леси Украинки, 26</a
                   >
@@ -740,6 +737,11 @@
               Соглашаюсь с рассылкой и принимаю&nbsp;
               <a href="" class="modal__accept-link">Условия договора</a>
             </label>
+          </div>
+          <div class="low-resolwe-modal">
+            <p class="low-resolwe-modal__text">
+              Sorry, your device is not supported :(
+            </p>
           </div>
 
           <button class="modal-btn main-btn btn" type="submit">
