--- a/portfolio.html
+++ b/portfolio.html
@@ -132,7 +132,7 @@
         </ul>
       </div>
     </header>
-    <main>
+    <main class="main">
       <section class="section">
         <div class="container">
           <h1 class="visually-hidden">Контент страницы Портфолио</h1>
@@ -674,6 +674,11 @@
         </div>
       </div>
     </footer>
+    <div class="low-resolwe-modal">
+      <p class="low-resolwe-modal__text">
+        Sorry, your device is not supported :(
+      </p>
+    </div>
     <script src="./js/index.js" type="module"></script>
     <script src="./js/mobile-menu.js"></script>
   </body>
